--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <title>Proyecto1-web</title>
 </head>
 <body>
-    
+    <div id="burger">
+        <div class="barra sup"></div>
+        <div class="barra med"></div>
+        <div class="barra inf"></div>
+    </div>
+    <div class="menu">
+        <nav>
+            <a href="#">Inicio</a>
+            <hr>
+            <a href="#">Venta</a>
+            <hr>
+            <a href="#">Alquiler</a>
+            <hr>
+            <a href="#">Contacto</a>
+            <hr>
+        </nav>
+        <p class="copy">&copy; Copyright</p>
+    </div>
 </body>
 </html>
