--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/main.js"></script>
 
     <title>Proyecto1-web</title>
